fixed images bug
fixed src tags on images in headers and on index page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
   <nav>
     <ul>
-      <li class="logo"><a href="index.html"><img src="/images/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
+      <li class="logo"><a href="index.html"><img src="images/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
       <li><a href="index.html"><i aria-hidden="true" class="fa-solid fa-mug-saucer"></i> About</a></li>
       <li><a href="product.html"><i aria-hidden="true" class="fa-solid fa-fire-flame-curved"></i> Products</a></li>
       <li><a href="contact.html"><i aria-hidden="true" class="fa-solid fa-phone"></i> Contact</a></li>
@@ -34,9 +34,9 @@
       <a class="button" href="contact.html">Contact Us</a>
     </article>
     <picture>
-        <source media="(max-width: 767px)" srcset="/images/gulp-pouring-coffee-horizontal-sm.jpg">
-        <source media="(max-width: 991px)" srcset="/images/gulp-pouring-coffee-vertical.jpg">
-      <img src="/images/gulp-pouring-coffee-horizontal.jpg" alt="Making pour-over coffee at our shop." />
+        <source media="(max-width: 767px)" srcset="images/gulp-pouring-coffee-horizontal-sm.jpg">
+        <source media="(max-width: 991px)" srcset="images/gulp-pouring-coffee-vertical.jpg">
+      <img src="images/gulp-pouring-coffee-horizontal.jpg" alt="Making pour-over coffee at our shop." />
     </picture>
   </section>
 </div>
