--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <header>
     <nav>
         <ul>
-        <li class="logo"><a href="index.html"><img src="/images/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
+        <li class="logo"><a href="index.html"><img src="images/gulp-logo-light.png" alt="Gulp Roast. Click for home." /></a></li>
         <li><a href="index.html"><i aria-hidden="true" class="fa-solid fa-mug-saucer"></i> About</a></li>
         <li><a href="product.html"><i aria-hidden="true" class="fa-solid fa-fire-flame-curved"></i> Products</a></li>
         <li><a href="contact.html"><i aria-hidden="true" class="fa-solid fa-phone"></i> Contact</a></li>
